add find video byId and all myVideos

--- a/src/locales/es-CO/translation.json
+++ b/src/locales/es-CO/translation.json
@@ -12,6 +12,9 @@
         "userExist": "Usuario ya existe"
       }
     },
+    "video": {
+      "notFound": "No se encontró el video"
+    },
     "requestError": {
       "internError": "Ha ocurrido un error interno en la consulta"
     }
